# fileio-mcp

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  NOTICE  README.md  SECURITY_AUDIT.md
.github/instructions/: testing.instructions.md
ai-fileio/: file2.txt  hardlink_file1.txt  symlink_to_file2.txt
docs/: result_shapes.md
scripts/: test_fileio_tools.py
src/: coerce.rs  error.rs  lib.rs  main.rs  path_guard.rs  server.rs  service.rs  tools.rs  transport.rs
src/operations/: chown.rs  chroot.rs  count_lines.rs  count_words.rs  cp.rs  edit_file.rs  file_find.rs  file_mode.rs  find_in_files.rs  get_mode.rs  link.rs  list_dir.rs  mkdir.rs  mktemp.rs  mod.rs  mv.rs  patch_file.rs  path_utils.rs  pwd.rs  read_lines.rs  rm.rs  rmdir.rs  stat.rs  touch.rs  write_file.rs
tests/: mcp_stdio_suite.rs
