[package]
name = "fileio-mcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = "0.12.2"
clap = { version = "4.5.53", features = ["derive", "env"] }
futures-util = "0.3.31"
filetime = "0.2"
globset = "0.4"
grep = "0.2"
ignore = "0.4"
nix = { version = "0.30.1", features = ["fs", "user"] }
regex = "1.10"
rustix = { version = "0.38", features = ["fs", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = "0.6.8"
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
