[package]
name = "fileio-mcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
futures-util = "0.3.31"
filetime = "0.2"
globset = "0.4"
ignore = "0.4"
nix = { version = "0.30.1", features = ["fs", "user"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
